--- a/src/app/oil-details/oil-details.component.html
+++ b/src/app/oil-details/oil-details.component.html
@@ -202,5 +202,78 @@
             <video src="assets/videos/log-video.mp4" autoplay muted loop playsinline preload="auto"
                 onloadedmetadata="this.muted = true" width="100%"></video>
         </div>
+
+        <div class="sina" *ngIf="oil.id == 7">
+            <h1>MOTIVO</h1>
+            <h3>Automatic Seismic Interpretation</h3>
+            <p>In the world of seismic data analysis, the need for efficient automation is crucial. Conventional
+                approaches often demand significant time investments, highlighting the importance of innovative
+                solutions to improve efficiency. Seismic data holds more information than it might seem, and manual
+                approaches don’t always extract its full potential.
+            </p>
+            <h3>ABOUT THE PRODUCT</h3>
+            <p>Meeting the urgent need for quick and accurate seismic data analysis, MOTIVO introduces an automated
+                interpretation stream that is set to transform data review procedure. This step forward is dedicated to
+                equipping geoscientists with an organized, data-centric method, leading to significant cost reductions
+                and enhanced exploration results.
+                <br><br>
+                Powered by cutting-edge AI technology, MOTIVO presents two innovative projects: 3D automatic seismic
+                clustering and automatic well-tie. These initiatives are purposefully crafted to enhance the efficiency
+                of seismic data analysis processes.
+            </p>
+            <div class="grid">
+                <figure>
+                    <img src="assets/images/motivo1.jpg" alt="" style="width:100%;">
+                </figure>
+                <figure>
+                    <img src="assets/images/motivo2.jpg" alt="" style="width:100%;">
+                </figure>
+            </div>
+            <p>
+                <br>
+                MOTIVO’s 3D automatic seismic clustering project employs advanced machine learning algorithms to
+                efficiently group seismic data into coherent clusters, enabling geoscientists to gain a comprehensive
+                understanding of subsurface structures. This approach expedites the identification of geological
+                features, thereby enhancing exploration and production processes.
+            </p>
+            <video src="assets/videos/Motivo1.mp4" autoplay muted loop playsinline preload="auto"
+                onloadedmetadata="this.muted = true" width="100%"></video>
+            <p>
+                <br>
+                MOTIVO’s automatic well-tie project streamlines the process of aligning seismic data with well data. The
+                intelligent system identifies crucial markers and integrates them with well data, saving valuable time
+                and reducing the potential for errors. This streamlined integration not only enhances reservoir
+                characterization but also acts as a compass for optimized drilling strategies.
+            </p>
+            <figure>
+                <img src="assets/images/motivo3.jpg" alt="" style="width:100%;">
+            </figure>
+            <video src="assets/videos/Motivo2.mp4" autoplay muted loop playsinline preload="auto"
+                onloadedmetadata="this.muted = true" width="100%"></video>
+            <h3>KEY BENEFITS</h3>
+            <p>• Enhanced Efficiency: MOTIVO transforms seismic data analysis with automated processes. The 3D automatic
+                seismic clustering swiftly organizes data, expediting geological feature
+                identification. The automatic well-tie project simplifies data correlation, reducing manual effort
+                and saving time.
+                <br><br>
+                • Heightened Precision: Algorithm offers a comprehensive subsurface understanding, leading to accurate
+                geological feature identification, consequently strengthening reservoir
+                characterization.
+                <br><br>
+                • Informed Decision-Making: MOTIVO, driven by advanced AI, empowers data-driven choices. This
+                streamlining not only aids decisions but also achieves cost savings and exploration success.
+                <br><br>
+            </p>
+            <p>Elevate your seismic data analysis with MOTIVO, and experience a seismic data transformation. At
+                WAVERITY, we believe in collaborative partnerships, actively engaging with clients to customize
+                solutions according to their specific needs. In the world of seismic data analysis, MOTIVO offers
+                streamlined automation, advanced algorithms, and AI-driven intelligence, providing you with the tools to
+                unlock hidden insights. Witness enhanced efficiency, precision, and informed decision-making, setting
+                new exploration and production standards. Just as we customize our products to maximize their value for
+                our clients, MOTIVO is tailored to empower your reservoir development and decision-making. Contact us
+                today to explore how MOTIVO can transform your understanding of subsurface structures and optimize
+                reservoir performance.
+            </p>
+        </div>
     </div>
 </div>
