--- a/src/app/oil/oil.component.html
+++ b/src/app/oil/oil.component.html
@@ -15,18 +15,18 @@
                 <ng-template ngbNavContent>
                     <div
                         class="d-flex flex-lg-row flex-md-column flex-sm-column flex-column justify-content-center align-items-center">
-                        <div *ngIf="data.id == 1 || data.id == 2 || data.id == 6" class="animate__fadeInLeft animate__animated">
+                        <div *ngIf="data.id == 1 || data.id == 2 || data.id == 6 || data.id == 7" class="animate__fadeInLeft animate__animated">
                             <img-comparison-slider hover="hover">
                                 <img slot="first" src="{{ data.cover3 }}" />
                                 <img slot="second" src="{{ data.cover2 }}" />
                             </img-comparison-slider>
                         </div>
-                        <img *ngIf="data.id > 2 && data.id != 6" [src]="data.cover" alt=""
+                        <img *ngIf="data.id > 2 && data.id != 6 && data.id != 7" [src]="data.cover" alt=""
                             class="animate__fadeInLeft animate__animated">
                         <div class="product">
                             <h2 class="animate__fadeInUp animate__animated">{{ data.title }}</h2>
                             <p class="animate__fadeInUp animate__animated">{{ data.info }}</p>
-                            <button class="animate__fadeInUp animate__animated" *ngIf="data.id == 1 || data.id == 2 || data.id == 6" routerLink="/solutions/oil-and-gas-solution/{{ data.id }}">Read More</button>
+                            <button class="animate__fadeInUp animate__animated" *ngIf="data.id == 1 || data.id == 2 || data.id == 6 || data.id == 7" routerLink="/solutions/oil-and-gas-solution/{{ data.id }}">Read More</button>
                         </div>
                     </div>
                 </ng-template>
