Minor Changes to Motivo

--- a/src/app/oil-details/oil-details.component.html
+++ b/src/app/oil-details/oil-details.component.html
@@ -223,10 +223,12 @@
             </p>
             <div class="grid">
                 <figure>
-                    <img src="assets/images/motivo1.jpg" alt="" style="width:100%;">
+                    <img src="assets/images/motivo1.png" alt="" style="width:100%;">
+                    <figcaption>Input Seismic Data</figcaption>
                 </figure>
                 <figure>
-                    <img src="assets/images/motivo2.jpg" alt="" style="width:100%;">
+                    <img src="assets/images/motivo2.png" alt="" style="width:100%;">
+                    <figcaption>Output Clustered Data</figcaption>
                 </figure>
             </div>
             <p>
@@ -247,6 +249,7 @@
             </p>
             <figure>
                 <img src="assets/images/motivo3.jpg" alt="" style="width:100%;">
+                <figcaption>Well-tie Process</figcaption>
             </figure>
             <video src="assets/videos/Motivo2.mp4" autoplay muted loop playsinline preload="auto"
                 onloadedmetadata="this.muted = true" width="100%"></video>
