--- a/src/app/oil-details/oil-details.component.html
+++ b/src/app/oil-details/oil-details.component.html
@@ -88,7 +88,7 @@
                     Our deep learning engine intelligently distinguishes noise from valuable seismic responses, ensuring
                     that the original signal remains intact throughout the noise attenuation process.
                 </p>
-                <img src="assets/images/sina-1.png" alt="">
+                <img src="assets/images/sina-model.png" alt="">
             </div>
             <div class="grid">
                 <figure>
@@ -267,15 +267,25 @@
                 streamlining not only aids decisions but also achieves cost savings and exploration success.
                 <br><br>
             </p>
-            <p>Elevate your seismic data analysis with MOTIVO, and experience a seismic data transformation. At
+            <h3>METHODOLOGY</h3>
+            <p>
+                MOTIVO products incorporate advanced machine learning techniques to achieve the optimal results. The
+                automated clustering algorithm utilizes artificial neural networks such as Self-organizing maps (SOM) in
+                conjunction with high computational power to analyze seismic data within the 5-80 Hz frequency range.
+                <br><br>
+                Additionally, a custom Adaptive Dynamic Time Warping algorithm employs machine learning-based
+                optimizations to discover the optimal parameter sets for the reliability of automated well-tie. These
+                technologies combine to ensure accurate and precise analysis of seismic data.
+                <br><br>
+                Elevate your seismic data analysis with MOTIVO, and experience a seismic data transformation. At
                 WAVERITY, we believe in collaborative partnerships, actively engaging with clients to customize
                 solutions according to their specific needs. In the world of seismic data analysis, MOTIVO offers
                 streamlined automation, advanced algorithms, and AI-driven intelligence, providing you with the tools to
-                unlock hidden insights. Witness enhanced efficiency, precision, and informed decision-making, setting
-                new exploration and production standards. Just as we customize our products to maximize their value for
-                our clients, MOTIVO is tailored to empower your reservoir development and decision-making. Contact us
-                today to explore how MOTIVO can transform your understanding of subsurface structures and optimize
-                reservoir performance.
+                unlock hidden insights.
+                <br><br>
+                Just as we customize our products to maximize their value for our clients, MOTIVO is tailored to empower
+                your reservoir development and decision-making. Contact us today to explore how MOTIVO can transform
+                your understanding of subsurface structures and optimize reservoir performance.
             </p>
         </div>
     </div>
