--- a/src/app/oil-details/oil-details.component.css
+++ b/src/app/oil-details/oil-details.component.css
@@ -50,7 +50,7 @@ p {
     font-weight: 400;
     font-size: 16px;
     letter-spacing: 1px;
-    text-align: left;
+    text-align: justify;
     line-height: 24px;
 }
 
