--- a/src/app/oil-details/oil-details.component.html
+++ b/src/app/oil-details/oil-details.component.html
@@ -2,7 +2,7 @@
     <div *ngIf="oil" class="container">
         <div class="siqe" *ngIf="oil.id == 1">
             <h1>S.I.Q.E.</h1>
-            <h3>Seismic Image Noise Attenuation</h3>
+            <h3>Seismic Image Quality Enhancement</h3>
             <p>Precise and comprehensive seismic images play a vital role in extracting valuable subsurface information
                 within the oil and gas industry. Yet, traditional methods of improving seismic image quality encounter
                 inherent limitations, often relying on the availability of well data or time-consuming parametrization.
