--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,27 +1,55 @@
-<div id="footer">
-  <footer class="container d-flex flex-lg-row flex-md-row flex-sm-column justify-content-between align-items-center">
-    <div id="logo"><a routerLink="/home"><img src="assets/images/logo3.svg" alt="" width="100px"></a></div>
-      <ul>
-        <li><a routerLink="/news" routerLinkActive="active">News</a></li>
-        <li><a routerLink="/about" routerLinkActive="active">About</a></li>
-        <li><a routerLink="/careers" routerLinkActive="active">Careers</a></li>
-      </ul>
-    <div id="contact-button"><button (click)="openLg(content)">Contact Us</button></div>
-  </footer>
-  <div class="container credits">
-    <h5>&nbsp;2023 © WAVERITY. All rights reserved.</h5>
-    <!-- <h5>Designed and Developed by <a href="">XALIZADEX</a></h5> -->
-    <div class="text-center socials">
-        <svg (click)="navigateTo('https://www.linkedin.com/company/waverity')" class="linkedin" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
-            <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
-          </svg>
-          &nbsp;
-          <svg (click)="navigateTo('https://www.youtube.com/@waverity')" class="youtube" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-youtube" viewBox="0 0 16 16">
-            <path d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.007 2.007 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.007 2.007 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31.4 31.4 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.007 2.007 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A99.788 99.788 0 0 1 7.858 2h.193zM6.4 5.209v4.818l4.157-2.408L6.4 5.209z"/>
-          </svg>
-      </div>
-  </div>
-</div>
+<footer>
+    <div class="container row m-auto">
+        <!-- <div class="breaking-line col-12 mb-5"></div> -->
+        <div class="col-12 col-lg-3">
+            <img src="assets/images/logo2.svg" alt="" width="130px">
+            <div class="partnership">
+              <h4>Powered by</h4>
+              <div>
+                <img (click)="navigateTo('https://ei-g.com/')" style="margin-right: 10px;" src="assets/images/eigroup.svg"
+                  alt="" height="70px">
+              </div>
+            </div>
+        </div>
+        <div class="col-12 col-lg-3 links">
+            
+        </div>
+        <div class="col-12 col-lg-3 links">
+            <h6>Company</h6>
+            <ul>
+                <li routerLink="/about">About</li>
+                <li routerLink="/news">News</li>
+                <li routerLink="/careers">Careers</li>
+                <li (click)="openLg(content)">Contact Us</li>
+            </ul>
+        </div>
+        <div class="col-12 col-lg-3 contacts">
+            <h6>Contacts</h6>
+            <ul>
+                <li>Keykab Khanim Safaraliyeva 14, Floor 2<br>AZ1010 Baku, Azerbaijan</li>
+                <li>+994 55 640 18 99</li>
+                <li>contact&#64;waverity.ai
+                </li>
+                <li>
+                    <svg (click)="navigateTo('https://www.linkedin.com/company/waverity/')" class="linkedin" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
+                      <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
+                    </svg>
+                    &nbsp;
+                    <svg (click)="navigateTo('https://www.youtube.com/@waverity')" class="youtube" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-youtube" viewBox="0 0 16 16">
+                      <path d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.007 2.007 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.007 2.007 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31.4 31.4 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.007 2.007 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A99.788 99.788 0 0 1 7.858 2h.193zM6.4 5.209v4.818l4.157-2.408L6.4 5.209z"/>
+                    </svg>
+                </li>
+            </ul>
+        </div>
+        <div class="breaking-line line-bottom col-12"></div>
+        <div class="col-12 col-lg-6 text-left copyright">
+            <h5>Copyright © 2023 <span>WAVERITY</span>. All rights reserved</h5>
+        </div>
+        <div class="col-12 col-lg-6 text-right copyright">
+            <h5>Developed by <span style="color: var(--blue);">Jamil Alizada</span></h5>
+        </div>
+    </div>
+</footer>
 
 
 <ng-template #content let-modal>
