--- a/src/styles.css
+++ b/src/styles.css
@@ -217,6 +217,7 @@ section {
 	font-size: 30px;
 	letter-spacing: 0.2em;
 	text-shadow: 0 2px 10px var(--blue);
+	z-index: 99 !important;
 }
 
 .section-head>p {
