--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,17 +2,22 @@
     <div class="container row m-auto">
         <!-- <div class="breaking-line col-12 mb-5"></div> -->
         <div class="col-12 col-lg-3">
-            <img src="assets/images/logo2.svg" alt="" width="130px">
+            <img src="assets/images/waverity_orange.svg" alt="" width="100px">
             <div class="partnership">
               <h4>Powered by</h4>
               <div>
                 <img (click)="navigateTo('https://ei-g.com/')" style="margin-right: 10px;" src="assets/images/eigroup_horizontal.svg"
-                  alt="" width="130px">
+                  alt="" width="100px">
               </div>
             </div>
         </div>
         <div class="col-12 col-lg-3 links">
-            
+            <h6>Solutions</h6>
+            <ul>
+                <li routerLink="/solutions/oil-and-gas/1">Oil and Gas</li>
+                <li routerLink="/solutions/remote-sensing-systems/1">Remote Sensing Systems</li>
+                <li routerLink="/solutions/custom-solutions/1">Custom Solutions</li>
+            </ul>
         </div>
         <div class="col-12 col-lg-3 links">
             <h6>Company</h6>
