--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -14,6 +14,10 @@
     margin-right: 20px;
 }
 
+.navbar-expand-lg .navbar-collapse {
+    margin-top: 0px !important;
+}
+
 
 nav {
     padding: 0;
