--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar backdrop-header fixed-top navbar-expand-lg navbar-dark animate__fadeInDown animate__animated">
   <div class="container">
-    <a class="navbar-brand logo" routerLink="/home"><img src="assets/images/logo2.svg" alt="" width="100px"></a>
+    <a class="navbar-brand logo" routerLink="/home"><img src="assets/images/waverity_orange.svg" alt="" width="100px"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
