--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -31,7 +31,10 @@
         <div class="col-12 col-lg-3 contacts">
             <h6>Contacts</h6>
             <ul>
-                <li>Keykab Khanim Safaraliyeva 14, Floor 2<br>AZ1010 Baku, Azerbaijan</li>
+                <li>Keykab Khanim Safaraliyeva 16e,
+                    <br>Time Bussinnes Center, Floor 10, AZ1010
+                    <br>Baku, Azerbaijan
+                  </li>
                 <li>+994 55 640 18 99</li>
                 <li>contact&#64;waverity.ai
                 </li>
