--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -32,7 +32,7 @@
             <h6>Contacts</h6>
             <ul>
                 <li>Keykab Khanim Safaraliyeva 16e,
-                    <br>Time Bussinnes Center, Floor 10, AZ1010
+                    <br>Time Business Center, Floor 10, AZ1010
                     <br>Baku, Azerbaijan
                   </li>
                 <li>+994 55 640 18 99</li>
