--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -33,7 +33,7 @@
             <div class="col-lg-4 col-sm-12 border-end border-2">
                 <h4>Address</h4>
                 <h6>Keykab Khanim Safaraliyeva 16e
-                    <br>Time Bussinnes Center, Floor 10</h6>
+                    <br>Time Business Center, Floor 10</h6>
             </div>
             <div class="col-lg-4 col-sm-12 border-end border-2">
                 <h4>Phone</h4>
