--- a/src/app/news-details/news-details.component.html
+++ b/src/app/news-details/news-details.component.html
@@ -4,7 +4,7 @@
       <img
         [src]="news.cover"
         width="auto"
-        class="animate__fadeInUp animate__animated"
+        class="basic animate__fadeInUp animate__animated"
       />
       <span class="animate__fadeInUp animate__animated"
         ><br />{{ news.date }}</span
@@ -68,10 +68,10 @@
           break curve behaviors. These advantages make our deep learning-driven
           FBP solution a valuable method for the seismic data processing cycle.
         </p>
-        <img class="col-12 col-md-6 col-lg-3" src="assets/images/n1.png" alt="">
-        <img class="col-12 col-md-6 col-lg-3" src="assets/images/n2.png" alt="">
-        <img class="col-12 col-md-6 col-lg-3" src="assets/images/n3.png" alt="">
-        <img class="col-12 col-md-6 col-lg-3" src="assets/images/n4.png" alt="">
+        <img class="col-12 col-md-6 col-lg-3 animate__fadeInUp animate__animated" src="assets/images/n1.png" alt="">
+        <img class="col-12 col-md-6 col-lg-3 animate__fadeInUp animate__animated" src="assets/images/n2.png" alt="">
+        <img class="col-12 col-md-6 col-lg-3 animate__fadeInUp animate__animated" src="assets/images/n3.png" alt="">
+        <img class="col-12 col-md-6 col-lg-3 animate__fadeInUp animate__animated" src="assets/images/n4.png" alt="">
       </div>
     </div>
   </div>
